--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>CedarsJS</title>
   </head>
-  <body style="background-color: #0f172a;">
+  <body style="background-color: #f6f9fc;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
