--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     -->
     <title>CedarsJS</title>
   </head>
-  <body style="background-color: #f6f9fc;">
+  <body style="background-color: #2E2B3C;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
